--- a/css/index.css
+++ b/css/index.css
@@ -1,57 +1,65 @@
 @import url("../vendor/normalize.css");
 
 @font-face {
-  font-family: "Muller";
-  src: url("../fonts/MullerMedium.woff2") format("woff2"),
-    url("../fonts/MullerMedium.woff") format("woff");
-  font-display: swap;
-  font-weight: 500;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Muller";
-  src: url("../fonts/MullerRegular.woff2") format("woff2"),
-    url("../fonts/MullerRegular.woff") format("woff");
-  font-display: swap;
-  font-weight: normal;
+  font-family: "JetBrains Mono";
+  src: local("JetBrains Mono Regular"), local("JetBrainsMono-Regular"),
+    url("../fonts/Jetbrainsmonoregular.woff2") format("woff2"),
+    url("../fonts/Jetbrainsmonoregular.woff") format("woff"),
+    url("../fonts/Jetbrainsmonoregular.ttf") format("truetype");
+  font-weight: 400;
   font-style: normal;
 }
 
 .page {
+  margin: 0 auto 0;
+  max-width: 1120px;
   padding: 30px;
   display: grid;
   grid-gap: 10px;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: 45px 1fr 1fr;
   grid-template-areas:
+    "title title"
     "visuals parameters"
     "visuals characteristics";
   gap: 3px 5px;
   background-color: #ebecf4;
 }
 
-.title {
+.main-title {
+  margin: 0;
+  grid-area: title;
+  font-family: "JetBrains Mono", "Courier New", monospace;
+  font-size: 23px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.section-title {
   margin: 0;
   position: absolute;
   right: 0;
   top: 0;
-  line-height: 1;
   padding: 5px 8px;
-  font-size: 12px;
-  color: #767676;
   background-color: #fff;
   border: 1px solid #ccc;
   border-right: none;
   border-top: none;
   border-radius: 0 4px 0 4px;
   z-index: 1;
+  font-family: "JetBrains Mono", "Courier New", monospace;
+  font-size: 13px;
+  line-height: 1.43;
+  color: #333;
+  font-weight: normal;
+  font-style: normal;
 }
 
 .label {
   margin-bottom: 15px;
   display: block;
-  font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
+  font-family: "JetBrains Mono", "Courier New", monospace;
   font-size: 13px;
   line-height: 1.43;
   color: #333;
@@ -59,16 +67,14 @@
   font-style: normal;
 }
 
+.canvas-wrapper {
+}
+
 .visuals {
-  position: relative;
+  width: 90%;
+  height: 100%;
+  padding: 30px 28px;
   grid-area: visuals;
-  width: 100%;
-  font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
-  font-size: 13px;
-  line-height: 1.43;
-  color: #333;
-  font-weight: normal;
-  font-style: normal;
   background-color: #f5f5f5;
   border: 1px solid #ccc;
   overflow-x: auto;
@@ -76,15 +82,9 @@
 }
 
 .parameters {
-  padding: 23px;
+  padding: 30px 28px;
   position: relative;
   grid-area: parameters;
-  font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
-  font-size: 13px;
-  line-height: 1.43;
-  color: #333;
-  font-weight: normal;
-  font-style: normal;
   background-color: #f5f5f5;
   border: 1px solid #ccc;
   overflow-x: auto;
@@ -92,15 +92,9 @@
 }
 
 .characteristics {
-  padding: 23px;
+  padding: 30px 28px;
   position: relative;
   grid-area: characteristics;
-  font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
-  font-size: 13px;
-  line-height: 1.43;
-  color: #333;
-  font-weight: normal;
-  font-style: normal;
   background-color: #f5f5f5;
   border: 1px solid #ccc;
   overflow-x: auto;
@@ -112,4 +106,12 @@
   padding: 1px 5px;
   border: 1px solid rgb(118, 118, 118);
   border-radius: 2px;
+}
+
+.character_need-play {
+  border: 0;
+  padding: 0;
+  width: 15px;
+  height: 15px;
+  background: center / contain no-repeat url("../img/play.svg");
 }
