--- a/css/index.css
+++ b/css/index.css
@@ -83,13 +83,17 @@
   max-width: 50px;
 }
 
-.visuals {
-  width: 100%;
-  height: 100%;
+.canvas-wrapper {
   grid-area: visuals;
+  align-items: stretch;
   background-color: #f5f5f5;
   border: 1px solid #ccc;
   border-radius: 4px;
+}
+
+.visuals {
+  width: 100%;
+  height: 100%;
 }
 
 .parameters {
